--- a/vdomTest/OnDemandGrid.html
+++ b/vdomTest/OnDemandGrid.html
@@ -39,132 +39,46 @@
 	var NUMBER_OF_DATA_COLUMNS = 12;
 	require({
 		packages: [
-			{name: 'maquette', location: '../dgrid/node_modules/maquette/dist', main: 'maquette'}
+			{ name: 'maquette', location: '../dgrid/node_modules/maquette/dist', main: 'maquette' }
 		]
-	}, ['maquette', 'dgrid/OnDemandGrid', 'dgrid/vdom/OnDemandGrid', 'dgrid/_StoreMixin', 'dgrid/vdom/_StoreMixin', 'dstore/Memory',
-		'dstore/Trackable', 'dojo/on'], function (maquette, OnDemandGrid, VdomOnDemandGrid, StoreMixin, VdomStoreMixin, Memory, Trackable, on) {
-
-
-		var VdomOnDemandStoreMixin = VdomStoreMixin.createSubclass([], {
-			refresh: function () {
-				var self = this;
-
-				// First defer to List#refresh to clear the grid's
-				// previous content
-				this.inherited(arguments);
-
-				if (!this._renderedCollection) {
-					return;
-				}
-			},
-
-			renderArray: function () {
-				var rows = this.inherited(arguments);
-
-				// Clear _lastCollection which is ordinarily only used for
-				// store-less grids
-				this._lastCollection = null;
-
-				return rows;
-			}
-		});
-
-		var OnDemandStoreMixin = StoreMixin.createSubclass([], {
-			refresh: function () {
-				var self = this;
-
-				// First defer to List#refresh to clear the grid's
-				// previous content
-				this.inherited(arguments);
-
-				if (!this._renderedCollection) {
-					return;
-				}
-			},
-
-			renderArray: function () {
-				var rows = this.inherited(arguments);
-
-				// Clear _lastCollection which is ordinarily only used for
-				// store-less grids
-				this._lastCollection = null;
-
-				return rows;
-			}
-		});
-
+	}, [
+		'maquette',
+		'dojo/on',
+		'dgrid/OnDemandGrid',
+		'dgrid/vdom/OnDemandGrid',
+		'dgrid/_StoreMixin',
+		'dgrid/vdom/_StoreMixin',
+		'dgrid/vdomTest/util'
+	], function (maquette, on, OnDemandGrid, VdomOnDemandGrid, StoreMixin, VdomStoreMixin, util) {
 		var projector = maquette.createProjector();
 
-		var data = [];
-		var i = 0;
-		for (; i < 20000; i++) {
-			data[i] = makeDataItem(i, NUMBER_OF_DATA_COLUMNS);
-		}
+		// createAsyncStore clones data, so we only have to populate it once
+		var data = util.makeData(20000, NUMBER_OF_DATA_COLUMNS);
+		var vdomStore = util.makeStore({ data: data });
+		var store = util.makeStore({ data: data });
 
-		var store = new (Memory.createSubclass([Trackable]))({data: data});
-
-		data = [];
-		i = 0;
-		for (; i < 20000; i++) {
-			data[i] = makeDataItem(i, NUMBER_OF_DATA_COLUMNS);
-		}
-
-		var vdomStore = new (Memory.createSubclass([Trackable]))({data: data});
-
-		// Pass the proj
-		var VdomStoreGrid = VdomOnDemandGrid.createSubclass([VdomOnDemandStoreMixin]);
-		var vdomGrid = new VdomStoreGrid({
+		var vdomGrid = new VdomOnDemandGrid({
 			id: 'vdomGrid',
 			projector: projector,
-			columns: makeColumnDef(NUMBER_OF_DATA_COLUMNS),
+			columns: util.makeColumnDef(NUMBER_OF_DATA_COLUMNS),
 			collection: vdomStore
 		});
 		projector.append(document.getElementById(vdomGrid.id), function () {
 			return vdomGrid.create();
 		});
 
-		var StoreGrid = OnDemandGrid.createSubclass([OnDemandStoreMixin]);
-		var grid = new StoreGrid({
-			columns: makeColumnDef(NUMBER_OF_DATA_COLUMNS),
+		var grid = new OnDemandGrid({
+			columns: util.makeColumnDef(NUMBER_OF_DATA_COLUMNS),
 			collection: store
 		}, 'grid');
 
-		var toModify = 0;
 		on(document.getElementById('modifyButton1'), 'click', function () {
-			vdomStore.get(toModify).then(function (item) {
-				item.field0 = 'XXX ' + i;
-				vdomStore.put(item);
-				i++;
-				toModify = (toModify + 1) % 3;
-			});
+			util.modifyItem(vdomStore);
 		});
 		on(document.getElementById('modifyButton2'), 'click', function () {
-			store.get(toModify).then(function (item) {
-				item.field0 = 'XXX ' + i;
-				store.put(item);
-				i++;
-				toModify = (toModify + 1) % 3;
-			});
+			util.modifyItem(store);
 		});
 	});
-
-	function makeDataItem(i, fieldCount) {
-		var item = { id: i };
-		for (var n = 0; n < fieldCount; n++) {
-			item['field' + n] = 'Data ' + n + ' - ' + i;
-		}
-		return item;
-	}
-
-	function makeColumnDef(fieldCount) {
-		var columns = {
-			id: "ID"
-		};
-		for (var n = 0 ; n < fieldCount; n++) {
-			columns['field' + n] = "Field " + n;
-		}
-		return columns;
-	}
 </script>
 </body>
 </html>
