--- a/vdomTest/OnDemandList.html
+++ b/vdomTest/OnDemandList.html
@@ -63,7 +63,7 @@
 			}
 		});
 		projector.append(document.getElementById(vdomGrid.id), function () {
-			return vdomGrid.create();
+			return vdomGrid.render();
 		});
 
 		var grid = new OnDemandList({
