--- a/vdomTest/move.html
+++ b/vdomTest/move.html
@@ -71,10 +71,6 @@
 <div>(From may be a range in "start-end" format, where end is inclusive)</div>
 </form>
 
-<div>
-	<button id="toggle-editable">Toggle Editable</button>
-</div>
-
 <div id="test"></div>
 
 <script src="../../dojo/dojo.js" data-dojo-config="async: true"></script>
@@ -97,21 +93,11 @@
 		function createItem() {
 			return {
 				id: ++lastIndex,
-				name: 'Item ' + lastIndex
+				mod: 0
 			};
 		}
 
-		function sortItems(a, b) {
-			if (a.name > b.name) {
-				return 1;
-			}
-			if (a.name < b.name) {
-				return -1;
-			}
-			return 0;
-		}
-
-		while (lastIndex < 9) {
+		while (lastIndex < 10) {
 			data.push(createItem());
 		}
 
@@ -142,30 +128,15 @@
 			pulse(node, 'item--modified');
 		}
 
-		var editable = false;
-
-		function onblur(event) {
-			var itemNode = event.target.parentNode;
-			// Hack for POC's sake since this example doesn't maintain a map
-			var index = Array.prototype.slice.call(itemNode.parentNode.children).indexOf(itemNode);
-			data[index].name = event.target.value;
-		}
-
 		projector.append(document.getElementById('test'), function () {
-			return h('div', data.sort(sortItems).map(function (item) {
+			return h('div', data.map(function (item) {
 				return h('div', {
 					classes: { item: true },
 					key: item.id,
 					enterAnimation: animateEnter,
 					exitAnimation: animateExit,
 					updateAnimation: animateUpdate
-				}, editable ? [
-					h('input', {
-						key: item.id + '-edit',
-						onblur: onblur,
-						value: item.name
-					})
-				] : item.name);
+				}, item.id + (item.mod ? '(edit ' + item.mod + ')' : ''));
 			}));
 		});
 
@@ -216,11 +187,6 @@
 			projector.scheduleRender();
 
 			this.reset();
-		});
-
-		on(document.getElementById('toggle-editable'), 'click', function () {
-			editable = !editable;
-			projector.scheduleRender();
 		});
 	});
 </script>
